// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/calculators/savings > endValue > should return right results for monthly monthly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      4.99,
      10.14,
      15.43,
      20.88,
      26.47,
      32.22,
      38.12,
      44.17,
      50.37,
      56.73,
      63.23,
      69.89,
      76.7,
      83.66,
      90.77,
      98.04,
      105.46,
      113.03,
      120.75,
      128.63,
      136.66,
      144.84,
      153.18,
      161.67,
      170.31,
      179.11,
      188.06,
      197.17,
      206.43,
      215.84,
      225.41,
      235.13,
      245.01,
      255.05,
      265.24,
      275.58,
      286.08,
      296.74,
      307.55,
      318.52,
      329.64,
      340.92,
      352.36,
      363.95,
      375.7,
      387.61,
      399.67,
      411.89,
      424.27,
      436.81,
      449.5,
      462.35,
      475.36,
      488.53,
      501.86,
      515.34,
      528.98,
      542.79,
      556.75,
      570.87,
      585.15,
      599.58,
      614.18,
      628.94,
      643.86,
      658.93,
      674.17,
      689.57,
      705.13,
      720.84,
      736.72,
      752.76,
      768.96,
      785.33,
      801.85,
      818.53,
      835.38,
      852.39,
      869.56,
      886.89,
      904.39,
      922.05,
      939.87,
      957.85,
      976,
      994.31,
      1012.78,
      1031.41,
      1050.21,
      1069.18,
      1088.3,
      1107.59,
      1127.05,
      1146.67,
      1166.45,
      1186.4,
      1206.52,
      1226.79,
      1247.24,
      1267.85,
      1288.62,
      1309.56,
      1330.67,
      1351.94,
      1373.38,
      1394.98,
      1416.75,
      1438.69,
      1460.8,
      1483.07,
      1505.51,
      1528.11,
      1550.89,
      1573.83,
      1596.94,
      1620.21,
      1643.66,
      1667.27,
      1691.05,
      1715,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "1.715€",
    "TOTAL_CAPITAL": "24.715€",
  },
  "endValue": "24.714,64€",
  "interestAfterTax": "1.714,64€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > endValue > should return right results for monthly monthly without start capital 1`] = `
{
  "deposits": "12.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      100,
      200,
      300,
      400,
      500,
      600,
      700,
      800,
      900,
      1000,
      1100,
      1200,
      1300,
      1400,
      1500,
      1600,
      1700,
      1800,
      1900,
      2000,
      2100,
      2200,
      2300,
      2400,
      2500,
      2600,
      2700,
      2800,
      2900,
      3000,
      3100,
      3200,
      3300,
      3400,
      3500,
      3600,
      3700,
      3800,
      3900,
      4000,
      4100,
      4200,
      4300,
      4400,
      4500,
      4600,
      4700,
      4800,
      4900,
      5000,
      5100,
      5200,
      5300,
      5400,
      5500,
      5600,
      5700,
      5800,
      5900,
      6000,
      6100,
      6200,
      6300,
      6400,
      6500,
      6600,
      6700,
      6800,
      6900,
      7000,
      7100,
      7200,
      7300,
      7400,
      7500,
      7600,
      7700,
      7800,
      7900,
      8000,
      8100,
      8200,
      8300,
      8400,
      8500,
      8600,
      8700,
      8800,
      8900,
      9000,
      9100,
      9200,
      9300,
      9400,
      9500,
      9600,
      9700,
      9800,
      9900,
      10000,
      10100,
      10200,
      10300,
      10400,
      10500,
      10600,
      10700,
      10800,
      10900,
      11000,
      11100,
      11200,
      11300,
      11400,
      11500,
      11600,
      11700,
      11800,
      11900,
      12000,
    ],
    "INTEREST_LIST": [
      0.41,
      1.25,
      2.5,
      4.18,
      6.28,
      8.8,
      11.76,
      15.14,
      18.95,
      23.2,
      27.88,
      32.99,
      38.55,
      44.54,
      50.98,
      57.86,
      65.18,
      72.95,
      81.17,
      89.85,
      98.97,
      108.55,
      118.59,
      129.08,
      140.04,
      151.45,
      163.33,
      175.68,
      188.5,
      201.78,
      215.54,
      229.77,
      244.48,
      259.67,
      275.33,
      291.48,
      308.11,
      325.23,
      342.84,
      360.93,
      379.52,
      398.6,
      418.18,
      438.26,
      458.84,
      479.92,
      501.5,
      523.59,
      546.19,
      569.3,
      592.93,
      617.07,
      641.72,
      666.9,
      692.59,
      718.82,
      745.56,
      772.84,
      800.64,
      828.98,
      857.85,
      887.26,
      917.21,
      947.7,
      978.74,
      1010.32,
      1042.44,
      1075.12,
      1108.36,
      1142.14,
      1176.49,
      1211.39,
      1246.86,
      1282.89,
      1319.49,
      1356.65,
      1394.39,
      1432.71,
      1471.59,
      1511.06,
      1551.11,
      1591.74,
      1632.96,
      1674.77,
      1717.17,
      1760.16,
      1803.74,
      1847.93,
      1892.72,
      1938.1,
      1984.1,
      2030.7,
      2077.92,
      2125.75,
      2174.19,
      2223.25,
      2272.94,
      2323.24,
      2374.18,
      2425.74,
      2477.94,
      2530.76,
      2584.23,
      2638.33,
      2693.08,
      2748.47,
      2804.51,
      2861.2,
      2918.54,
      2976.54,
      3035.2,
      3094.52,
      3154.5,
      3215.14,
      3276.46,
      3338.45,
      3401.12,
      3464.46,
      3528.48,
      3593.19,
    ],
    "LAST_CAPITAL": "12.000€",
    "LAST_INTEREST": "3.593,19€",
    "TOTAL_CAPITAL": "15.593,19€",
  },
  "endValue": "15.592,93€",
  "interestAfterTax": "3.592,93€",
  "monthlyDuration": "120,00",
  "savingRate": "100€",
  "startCapital": "0€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,00%",
}
`;

exports[`/calculators/savings > endValue > should return right results for monthly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      89.62,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      971.51,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1237.7,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1534.89,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      1863.54,
      2224.12,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "2.224,12€",
    "TOTAL_CAPITAL": "25.224,12€",
  },
  "endValue": "25.224,13€",
  "interestAfterTax": "2.224,13€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > endValue > should return right results for yearly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      318.89,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      649.01,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      850.2,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1075.86,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1326.3,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1601.82,
      1902.73,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "1.902,73€",
    "TOTAL_CAPITAL": "24.902,73€",
  },
  "endValue": "24.902,68€",
  "interestAfterTax": "1.902,68€",
  "monthlyDuration": "120,00",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for monthly monthly 1`] = `
{
  "deposits": "17.447,99€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
    ],
    "INTEREST_LIST": [
      12.87,
      26.15,
      39.84,
      53.94,
      68.45,
      83.37,
      98.7,
      114.45,
      130.61,
      147.19,
      164.18,
      181.59,
      199.42,
      217.67,
      236.33,
      255.42,
      274.94,
      294.87,
      315.24,
      336.02,
      357.24,
      378.88,
      400.95,
      423.46,
      446.39,
      469.75,
      493.55,
      517.79,
      542.46,
      567.56,
      593.1,
      619.09,
      645.51,
      672.37,
      699.68,
      727.43,
      755.62,
      784.26,
      813.34,
      842.88,
      872.86,
      903.29,
      934.17,
      965.51,
      997.3,
      1029.54,
      1062.24,
      1095.39,
      1129,
      1163.08,
      1197.61,
      1232.6,
      1268.06,
      1303.98,
      1340.36,
      1377.21,
      1414.53,
      1452.32,
      1490.57,
      1529.3,
      1568.5,
      1608.17,
      1648.31,
      1688.93,
      1730.03,
      1771.6,
      1813.66,
      1856.19,
      1899.21,
      1942.7,
      1986.69,
      2031.15,
      2076.1,
      2121.54,
      2167.47,
      2213.89,
      2260.8,
      2308.2,
      2356.1,
      2404.49,
      2453.37,
      2502.75,
    ],
    "LAST_CAPITAL": "17.300€",
    "LAST_INTEREST": "2.502,75€",
    "TOTAL_CAPITAL": "19.802,75€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.552,01€",
  "monthlyDuration": "82,99",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "6,92",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for monthly yearly 1`] = `
{
  "deposits": "17.864,67€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      146.15,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      339.91,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      582.44,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      874.93,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1218.6,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      1614.71,
      2064.54,
      2064.54,
    ],
    "LAST_CAPITAL": "17.750€",
    "LAST_INTEREST": "2.064,54€",
    "TOTAL_CAPITAL": "19.814,54€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.135,33€",
  "monthlyDuration": "85,76",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,15",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for yearly yearly 1`] = `
{
  "deposits": "17.743,32€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      166.33,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      380.76,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      644.47,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      958.66,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1324.56,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      1743.45,
      2216.61,
    ],
    "LAST_CAPITAL": "17.600€",
    "LAST_INTEREST": "2.216,61€",
    "TOTAL_CAPITAL": "19.816,61€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.256,68€",
  "monthlyDuration": "84,96",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,08",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for accumulating 1`] = `
{
  "deposits": "9.364,50€",
  "diagramData": {
    "CAPITAL_LIST": [
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      285.06,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      401.75,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      635.46,
    ],
    "LAST_CAPITAL": "9.364,50€",
    "LAST_INTEREST": "635,46€",
    "TOTAL_CAPITAL": "9.999,96€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "635,50€",
  "monthlyDuration": "84,00",
  "savingRate": "623,50€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for monthly monthly 1`] = `
{
  "deposits": "9.358,76€",
  "diagramData": {
    "CAPITAL_LIST": [
      5051.89,
      5103.78,
      5155.67,
      5207.56,
      5259.45,
      5311.34,
      5363.23,
      5415.12,
      5467.01,
      5518.9,
      5570.79,
      5622.68,
      5674.57,
      5726.46,
      5778.35,
      5830.24,
      5882.13,
      5934.02,
      5985.91,
      6037.8,
      6089.69,
      6141.58,
      6193.47,
      6245.36,
      6297.25,
      6349.14,
      6401.03,
      6452.92,
      6504.81,
      6556.7,
      6608.59,
      6660.48,
      6712.37,
      6764.26,
      6816.15,
      6868.04,
      6919.93,
      6971.82,
      7023.71,
      7075.6,
      7127.49,
      7179.38,
      7231.27,
      7283.16,
      7335.05,
      7386.94,
      7438.83,
      7490.72,
      7542.61,
      7594.5,
      7646.39,
      7698.28,
      7750.17,
      7802.06,
      7853.95,
      7905.84,
      7957.73,
      8009.62,
      8061.51,
      8113.4,
      8165.29,
      8217.18,
      8269.07,
      8320.96,
      8372.85,
      8424.74,
      8476.63,
      8528.52,
      8580.41,
      8632.3,
      8684.19,
      8736.08,
      8787.97,
      8839.86,
      8891.75,
      8943.64,
      8995.53,
      9047.42,
      9099.31,
      9151.2,
      9203.09,
      9254.98,
      9306.87,
      9358.76,
    ],
    "INTEREST_LIST": [
      5.14,
      10.35,
      15.61,
      20.93,
      26.31,
      31.75,
      37.25,
      42.8,
      48.42,
      54.09,
      59.82,
      65.61,
      71.46,
      77.37,
      83.34,
      89.36,
      95.44,
      101.59,
      107.79,
      114.05,
      120.37,
      126.75,
      133.19,
      139.69,
      146.25,
      152.87,
      159.55,
      166.29,
      173.08,
      179.94,
      186.86,
      193.83,
      200.87,
      207.97,
      215.13,
      222.34,
      229.62,
      236.96,
      244.36,
      251.81,
      259.33,
      266.91,
      274.55,
      282.25,
      290.02,
      297.84,
      305.72,
      313.67,
      321.67,
      329.74,
      337.86,
      346.05,
      354.3,
      362.61,
      370.98,
      379.42,
      387.91,
      396.47,
      405.09,
      413.77,
      422.51,
      431.31,
      440.18,
      449.11,
      458.09,
      467.15,
      476.26,
      485.43,
      494.67,
      503.97,
      513.33,
      522.76,
      532.25,
      541.8,
      551.41,
      561.08,
      570.82,
      580.62,
      590.48,
      600.41,
      610.4,
      620.45,
      630.57,
      640.74,
    ],
    "LAST_CAPITAL": "9.358,76€",
    "LAST_INTEREST": "640,74€",
    "TOTAL_CAPITAL": "9.999,50€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "641,24€",
  "monthlyDuration": "84,00",
  "savingRate": "51,89€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for monthly yearly 1`] = `
{
  "deposits": "9.393,20€",
  "diagramData": {
    "CAPITAL_LIST": [
      5052.3,
      5104.6,
      5156.9,
      5209.2,
      5261.5,
      5313.8,
      5366.1,
      5418.4,
      5470.7,
      5523,
      5575.3,
      5627.6,
      5679.9,
      5732.2,
      5784.5,
      5836.8,
      5889.1,
      5941.4,
      5993.7,
      6046,
      6098.3,
      6150.6,
      6202.9,
      6255.2,
      6307.5,
      6359.8,
      6412.1,
      6464.4,
      6516.7,
      6569,
      6621.3,
      6673.6,
      6725.9,
      6778.2,
      6830.5,
      6882.8,
      6935.1,
      6987.4,
      7039.7,
      7092,
      7144.3,
      7196.6,
      7248.9,
      7301.2,
      7353.5,
      7405.8,
      7458.1,
      7510.4,
      7562.7,
      7615,
      7667.3,
      7719.6,
      7771.9,
      7824.2,
      7876.5,
      7928.8,
      7981.1,
      8033.4,
      8085.7,
      8138,
      8190.3,
      8242.6,
      8294.9,
      8347.2,
      8399.5,
      8451.8,
      8504.1,
      8556.4,
      8608.7,
      8661,
      8713.3,
      8765.6,
      8817.9,
      8870.2,
      8922.5,
      8974.8,
      9027.1,
      9079.4,
      9131.7,
      9184,
      9236.3,
      9288.6,
      9340.9,
      9393.2,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      132.3,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      210.59,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      297.09,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      391.9,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      495.12,
      606.84,
    ],
    "LAST_CAPITAL": "9.393,20€",
    "LAST_INTEREST": "606,84€",
    "TOTAL_CAPITAL": "10.000,04€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "606,80€",
  "monthlyDuration": "84,00",
  "savingRate": "52,30€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for yearly yearly 1`] = `
{
  "deposits": "9.191,60€",
  "diagramData": {
    "CAPITAL_LIST": [
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      178.2,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      282.82,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      397.99,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      523.87,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      660.62,
      808.4,
    ],
    "LAST_CAPITAL": "9.191,60€",
    "LAST_INTEREST": "808,40€",
    "TOTAL_CAPITAL": "10.000€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "808,40€",
  "monthlyDuration": "84,00",
  "savingRate": "598,80€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > startValue > should return right results for monthly monthly 1`] = `
{
  "deposits": "17.862,46€",
  "diagramData": {
    "CAPITAL_LIST": [
      5412.46,
      5562.46,
      5712.46,
      5862.46,
      6012.46,
      6162.46,
      6312.46,
      6462.46,
      6612.46,
      6762.46,
      6912.46,
      7062.46,
      7212.46,
      7362.46,
      7512.46,
      7662.46,
      7812.46,
      7962.46,
      8112.46,
      8262.46,
      8412.46,
      8562.46,
      8712.46,
      8862.46,
      9012.46,
      9162.46,
      9312.46,
      9462.46,
      9612.46,
      9762.46,
      9912.46,
      10062.46,
      10212.46,
      10362.46,
      10512.46,
      10662.46,
      10812.46,
      10962.46,
      11112.46,
      11262.46,
      11412.46,
      11562.46,
      11712.46,
      11862.46,
      12012.46,
      12162.46,
      12312.46,
      12462.46,
      12612.46,
      12762.46,
      12912.46,
      13062.46,
      13212.46,
      13362.46,
      13512.46,
      13662.46,
      13812.46,
      13962.46,
      14112.46,
      14262.46,
      14412.46,
      14562.46,
      14712.46,
      14862.46,
      15012.46,
      15162.46,
      15312.46,
      15462.46,
      15612.46,
      15762.46,
      15912.46,
      16062.46,
      16212.46,
      16362.46,
      16512.46,
      16662.46,
      16812.46,
      16962.46,
      17112.46,
      17262.46,
      17412.46,
      17562.46,
      17712.46,
      17862.46,
    ],
    "INTEREST_LIST": [
      11.03,
      22.38,
      34.07,
      46.09,
      58.43,
      71.11,
      84.12,
      97.46,
      111.14,
      125.14,
      139.49,
      154.16,
      169.18,
      184.53,
      200.21,
      216.24,
      232.6,
      249.3,
      266.34,
      283.72,
      301.44,
      319.51,
      337.91,
      356.66,
      375.76,
      395.2,
      414.98,
      435.11,
      455.59,
      476.41,
      497.58,
      519.1,
      540.97,
      563.19,
      585.77,
      608.69,
      631.96,
      655.59,
      679.58,
      703.91,
      728.61,
      753.66,
      779.06,
      804.82,
      830.94,
      857.42,
      884.26,
      911.46,
      939.03,
      966.95,
      995.23,
      1023.88,
      1052.9,
      1082.27,
      1112.02,
      1142.13,
      1172.61,
      1203.45,
      1234.66,
      1266.25,
      1298.2,
      1330.52,
      1363.22,
      1396.29,
      1429.73,
      1463.54,
      1497.73,
      1532.29,
      1567.23,
      1602.55,
      1638.25,
      1674.32,
      1710.77,
      1747.61,
      1784.82,
      1822.42,
      1860.39,
      1898.75,
      1937.5,
      1976.63,
      2016.14,
      2056.04,
      2096.33,
      2137,
    ],
    "LAST_CAPITAL": "17.862,46€",
    "LAST_INTEREST": "2.137€",
    "TOTAL_CAPITAL": "19.999,46€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.137,54€",
  "monthlyDuration": "84,00",
  "savingRate": "150€",
  "startCapital": "5.262,46€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > startValue > should return right results for monthly yearly 1`] = `
{
  "deposits": "18.068,87€",
  "diagramData": {
    "CAPITAL_LIST": [
      5618.87,
      5768.87,
      5918.87,
      6068.87,
      6218.87,
      6368.87,
      6518.87,
      6668.87,
      6818.87,
      6968.87,
      7118.87,
      7268.87,
      7418.87,
      7568.87,
      7718.87,
      7868.87,
      8018.87,
      8168.87,
      8318.87,
      8468.87,
      8618.87,
      8768.87,
      8918.87,
      9068.87,
      9218.87,
      9368.87,
      9518.87,
      9668.87,
      9818.87,
      9968.87,
      10118.87,
      10268.87,
      10418.87,
      10568.87,
      10718.87,
      10868.87,
      11018.87,
      11168.87,
      11318.87,
      11468.87,
      11618.87,
      11768.87,
      11918.87,
      12068.87,
      12218.87,
      12368.87,
      12518.87,
      12668.87,
      12818.87,
      12968.87,
      13118.87,
      13268.87,
      13418.87,
      13568.87,
      13718.87,
      13868.87,
      14018.87,
      14168.87,
      14318.87,
      14468.87,
      14618.87,
      14768.87,
      14918.87,
      15068.87,
      15218.87,
      15368.87,
      15518.87,
      15668.87,
      15818.87,
      15968.87,
      16118.87,
      16268.87,
      16418.87,
      16568.87,
      16718.87,
      16868.87,
      17018.87,
      17168.87,
      17318.87,
      17468.87,
      17618.87,
      17768.87,
      17918.87,
      18068.87,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      556.65,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      830.55,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1150.26,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1516.79,
      1931.17,
    ],
    "LAST_CAPITAL": "18.068,87€",
    "LAST_INTEREST": "1.931,17€",
    "TOTAL_CAPITAL": "20.000,04€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "1.931,13€",
  "monthlyDuration": "84,00",
  "savingRate": "150€",
  "startCapital": "5.468,87€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > startValue > should return right results for yearly yearly 1`] = `
{
  "deposits": "17.310,89€",
  "diagramData": {
    "CAPITAL_LIST": [
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      195.32,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      767.35,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      1593.45,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2106.58,
      2689.11,
    ],
    "LAST_CAPITAL": "17.310,89€",
    "LAST_INTEREST": "2.689,11€",
    "TOTAL_CAPITAL": "20.000€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.689,11€",
  "monthlyDuration": "84,00",
  "savingRate": "1.800€",
  "startCapital": "4.710,89€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for monthly monthly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      18.01,
      36.61,
      55.8,
      75.59,
      95.96,
      116.94,
      138.51,
      160.68,
      183.45,
      206.83,
      230.82,
      255.41,
      280.61,
      306.43,
      332.86,
      359.91,
      387.58,
      415.87,
      444.78,
      474.32,
      504.49,
      535.29,
      566.72,
      598.78,
      631.49,
      664.83,
      698.81,
      733.43,
      768.71,
      804.62,
      841.19,
      878.42,
      916.29,
      954.83,
      994.02,
      1033.88,
      1074.4,
      1115.58,
      1157.44,
      1199.97,
      1243.17,
      1287.04,
      1331.6,
      1376.83,
      1422.75,
      1469.35,
      1516.64,
      1564.62,
      1613.29,
      1662.66,
      1712.72,
      1763.49,
      1814.96,
      1867.13,
      1920.01,
      1973.6,
      2027.9,
      2082.91,
      2138.65,
      2195.1,
      2252.27,
      2310.17,
      2368.8,
      2428.16,
      2488.25,
      2549.07,
      2610.63,
      2672.93,
      2735.98,
      2799.76,
      2864.3,
      2929.59,
      2995.63,
      3062.42,
      3129.98,
      3198.29,
      3267.37,
      3337.22,
      3407.83,
      3479.22,
      3551.38,
      3624.32,
      3698.03,
      3772.53,
      3847.82,
      3923.89,
      4000.76,
      4078.41,
      4156.87,
      4236.12,
      4316.18,
      4397.04,
      4478.7,
      4561.18,
      4644.47,
      4728.58,
      4813.5,
      4899.25,
      4985.82,
      5073.22,
      5161.45,
      5250.52,
      5340.42,
      5431.16,
      5522.74,
      5615.16,
      5708.44,
      5802.56,
      5897.54,
      5993.38,
      6090.07,
      6187.63,
      6286.06,
      6385.35,
      6485.52,
      6586.56,
      6688.48,
      6791.28,
      6894.96,
      6999.54,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "6.999,54€",
    "TOTAL_CAPITAL": "29.999,54€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,15%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for monthly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      255.59,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1034.35,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      7000.01,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "7.000,01€",
    "TOTAL_CAPITAL": "30.000,01€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "4,28%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for yearly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2259.69,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      2993.36,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      3829.97,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      4773.68,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      5828.86,
      7000.04,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "7.000,04€",
    "TOTAL_CAPITAL": "30.000,04€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,24%",
}
`;
